# drf-introduction

./: README.md  db.sqlite3  manage.py  pyproject.toml
drf_introduction/: asgi.py  settings.py  urls.py  wsgi.py
restful_api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
restful_api/migrations/: 0001_initial.py
