[project]
name = "drf-introduction"
version = "0.1.0"
description = "A hands-on introduction to Django REST Framework (DRF)"
authors = [
    {name = "HatfieldAlex",email = "alex.hatfield.tech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
